# browserpilot

./: .gitignore  AGENTS.md  Agentic_RPA_项目规划_V0.1.md  CLAUDE.md  README.md
agent-rpa/: README.md  pyproject.toml
agent-rpa/agent/: __init__.py
agent-rpa/agent/browser/: __init__.py  playwright.py  snapshot.py
agent-rpa/agent/core/: __init__.py  agent.py  executor.py  observer.py  planner.py
agent-rpa/agent/llm/: __init__.py
agent-rpa/agent/prompts/: __init__.py
agent-rpa/agent/schema/: __init__.py  action.py  observation.py  snapshot.py
agent-rpa/agent/tools/: __init__.py
agent-rpa/examples/: agent_demo.py  manual_demo.py
agent-rpa/tests/: test_action.py  test_executor.py  test_observation.py  test_regression_fixed_issues.py  test_snapshot.py
